--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </section>
     <section class="container pesquisar">
-        <h2>Encontre seu hotel</h2>
+        <h2>Buscando as melhores ofertas?</h2>
             <nav class="base">
                 <nav class="tipo">
                     <form action="" method="POST" id="" class="tipo_de_viagem">
