--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type"image/png" href="./img/logofav.png">
+    <link rel="shortcut icon" type"image/png" href="./img/logo-grande.svg">
     <link rel="stylesheet" href="./css/style.css">
     <title>Traveller</title>
 </head>
@@ -14,7 +14,7 @@
     <section class="container banner">
         <header class="header"> 
             <nav class="header__logo">
-                <img src="./img/logo-reduzido.png" alt="" srcset="">
+                <img src="./img/Traveller (1) (1).svg" alt="" srcset="">
             </nav>
             <nav class="header__menu">
                 <ul class="links__menu">
@@ -31,14 +31,16 @@
 
     </section>
     <section class="container pesquisar">
-        <h2>Buscando as melhores ofertas?</h2>
+
             <nav class="base">
+                        <h2><p>Que tal cotar todos os hotéis em um só lugar?</p>  Preencha e consulte os melhores preços:</h2>
                 <nav class="tipo">
                     <form action="" method="POST" id="" class="tipo_de_viagem">
                         <select name="" id="tipo_de_viagem">
-                            <option value="0" disabled selected>Tipo de Viagem</option>
-                            <option value="1">Em família</option>
-                            <option value="2">Trabalho</option>
+                            <option value="0" disabled selected>Selecione</option>
+                            <option value="1">Viagens em família</option>
+                            <option value="2">Viagens em trabalho</option>
+                            <option value="3">Passeios</option>
                         </select>
                 </nav>
             <nav class="buscar">
